[package]
name = "trace_google"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
dotenv = "0.15.0"
rand = "0.8.5"
random = "0.14.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

